@@ -1,3 +1,15 @@
+2011-04-27  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by David Levin.
+
+        Make GraphicsContext3DChromium play nice with strict OwnPtrs
+        https://bugs.webkit.org/show_bug.cgi?id=59659
+
+        Attempt #2.  Hopefully this time I won't make everything crash.
+
+        * src/GraphicsContext3DChromium.cpp:
+        (WebCore::GraphicsContext3DInternal::initialize):
+
 2011-04-27  Dirk Pranke  <dpranke@chromium.org>
 
         Reviewed by Darin Fisher.
